-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.11
-
None
-
X.Org X Server 1.19.5
Linux hostname 4.12.12-gentoo #1 SMP Sun Oct 1 15:18:36 BST 2017 x86_64 AMD Phenom(tm) II X3 705e Processor AuthenticAMD GNU/Linux
There are some X11/XCB keysyms which are not recognised by Qt and hence cannot be part of a QKeySequence, processed by an application etc. They are defined by standard X11 (i.e. are not XF86 or any other vendor specific), and can be generated by, for example, a Sun Type 6 keyboard.
The keys which I have available and are observed as affected are:
XK_Undo = 0xff65
XK_Redo = 0xff66
XK_Find = 0xff68
XK_Cancel = 0xff69
The logical mappings would be to Qt::Key_Undo, Qt::Key_Redo, Qt::Key_Find and Qt::Key_Cancel respectively. However, there is no entry for any of these keys in the KeyTbl[] array in src/plugins/platforms/xcb/qxcbkeyboard.cpp and hence they are not recognised.
QTBUG-8956 refers to the same problem with a different list of missing keys, but that bug is ancient and was never actioned.
For Gerrit Dashboard: QTBUG-69062 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
233036,5 | Recognize X11/XCB keysyms Undo, Redo, Find, Cancel | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |